--- a/main.html
+++ b/main.html
@@ -8,6 +8,52 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name"  placeholder="Name" required>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Email">
+		<br>
+		<label for="gender">Gender: </label>
+		<input type="radio" id="gender_m" name="gender" required>Male
+		<input type="radio" id="gender_f" name="gender" required>Female
+		<br>
+
+		<label for="cars">Please choose an option</label>
+		<br>
+		<select name="cars" id="cars" placeholder="Please choose an option" required>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Benz">Benz</option>
+			<option value="Alto">Alto</option>
+			
+		</select>
+		<br>
+
+		<label for="age">Age: </label>
+		<input type="number" id="age" placeholder="Age" required>
+
+		<br>
+		<label for="dob">DOB: </label>
+		<input type="date" id="dob" required>
+		<br>
+
+		<label for="tel">Phone Number: </label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" required>
+		<br>
+
+		<label for="password">Password: </label>
+		<input type="password" id="password" placeholder="password" required>
+		<br>
+
+		<label for="tos">
+			<input type="checkbox" id="tos" required> I agree to the TOS
+		</label>
+		<br>
+		
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
