--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<input type="text" id="name"  placeholder="Name" required>
 		<br>
 		<label for="email">Email</label>
-		<input type="email" id="email" placeholder="Email">
+		<input type="email" id="email" placeholder="Email" required>
 		<br>
 		<label for="gender">Gender: </label>
 		<input type="radio" id="gender_m" name="gender" required>Male
@@ -51,6 +51,8 @@
 			<input type="checkbox" id="tos" required> I agree to the TOS
 		</label>
 		<br>
+
+		<button type="submit" >Submit</button>
 		
 		
 	</form>
